--- a/item/templates/item/item_detail.html
+++ b/item/templates/item/item_detail.html
@@ -21,7 +21,7 @@
         <span class="fw-bold"><i class="bi bi-info-circle-fill item-text-color"></i> Item Details</span>
       </div>
       <div class="panel-content">
-        <table class="table table-sm table-borderless">
+        <table class="table table-sm table-borderless small">
           <tbody>
             <tr>
               <td width="15%" class="text-muted">Product ID:</td>
@@ -82,8 +82,8 @@
       </div>
       <div class="panel-content">
         {% if attachments|length %}
-          <table class="table table-sm table-hover">
-            <thead class="text-small">
+          <table class="table table-sm table-hover small">
+            <thead>
               <tr>
                 <th class="text-muted d-none d-lg-block">Uploaded</th>
                 <th class="text-muted">Name</th>
@@ -136,47 +136,29 @@
     {# stocks #}
     <div class="panel mb-4">
       <div class="panel-heading d-flex justify-content-between">
-        <span class="fw-bold"><i class="bi bi-box-seam-fill stock-text-color"></i> Available Stocks</span>
+        <span class="fw-bold"><i class="bi bi-boxes stock-text-color"></i> Available Stocks</span>
       </div>
       <div class="panel-content">
         <div class="table-responsive">
-          <table class="table table-sm table-hover">
+          <table class="table table-sm table-hover small">
             <thead>
               <tr>
                 <th class="text-muted">Lot Number</th>
-                <th class="text-muted">Box Number</th>
                 <th class="text-muted">Expiry Date</th>
-                <th class="text-muted">Location</th>
                 <th class="text-muted">Quantity</th>
-                <th class="text-muted">Actions</th>
               </tr>
             </thead>
             <tbody>
               {% for stock in stocks %}
-                {# TODO: paginate page_obj #}
-                <tr>
-                  <td>{{ stock.lot_number }}</td>
-                  <td>
-                    <span class="badge rounded-pill bg-info"><b>{{ stock.ordinal_number }}</b></span>
-                  </td>
-                  <td>{{ stock.expiry_date|date:'d/m/Y' }}</td>
-                  <td>
-                    <a href="#"
-                       title="location details">{{ stock.location }}</a>
-                  </td>
-                  <td>{{ stock.remaining_quantity_display }}</td>
-                  <td>
-                    <a href="{% url 'stock_update' stock.pk %}?next={{ request.path }}"
-                       title="Update {{ stock.name }}"><i class="bi bi-pencil-square"></i></a>
-                    <a hx-get="{% url 'stock_delete' stock.pk %}?next={{ request.path }}"
-                       hx-trigger="click"
-                       hx-target="#crudModal .modal-content"
-                       hx-swap="innerHTML"
-                       data-bs-toggle="modal"
-                       data-bs-target="#crudModal"
-                       href="javascript:"><i class="bi bi-trash"></i></a>
-                  </td>
-                </tr>
+                {% if not stock.is_empty %}
+                  <tr>
+                    <td class="ps-2">
+                      <a href="{% url 'stock_detail' stock.pk %}">{{ stock.lot_number }}</a>
+                    </td>
+                    <td class="ps-2">{{ stock.expiry_date|date:'d/m/Y' }}</td>
+                    <td class="ps-2">{{ stock.entries.count }}</td>
+                  </tr>
+                {% endif %}
               {% endfor %}
             </tbody>
           </table>
