--- a/templates/homepage/deliveries.html
+++ b/templates/homepage/deliveries.html
@@ -1,10 +1,32 @@
 <div class="panel panel-frontpage">
   <div class="panel-heading">
-    <div class="d-flex align-items-center pe-2">
-      <i class="bi bi-cart-fill pe-2 delivery-text-color"></i> <b>Latest Deliveries</b>
+    <div class="d-flex justify-content-between pe-2">
+      <span><i class="bi bi-cart-fill delivery-text-color"></i> <b>Latest Deliveries</b></span>
+      <span class="float-end">
+        <a href="{% url 'stock_list' %}"
+           title="List of all stocks"
+           data-bs-toggle="tooltip">
+          <i class="bi bi-box-arrow-up-right"></i>
+        </a>
+      </span>
     </div>
   </div>
   <div class="panel-content">
-    {% for delivery in deliveries|slice:5 %}<p>{{ delivery.delivery_date }}</p>{% endfor %}
+    <div class="px-2 small">
+      <table class="table table-sm table-hover">
+        <tbody>
+          {% for stock in stocks|slice:5 %}
+            <tr>
+              <td>{{ stock.delivery_date|date:'d/m/Y' }}</td>
+              <td>{{ stock.item.name }}</td>
+              <td>x {{ stock.entries.count }}</td>
+              <td>
+                <a href="{% url 'stock_detail' stock.pk %}"><i class="bi bi-box-arrow-up-right"></i></a>
+              </td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
