--- a/templates/homepage/statistics.html
+++ b/templates/homepage/statistics.html
@@ -8,5 +8,6 @@
     <p>Total Items: {{ items|length }}</p>
     <p>Total Stocks: {{ stocks|length }}</p>
     <p>Total Deliveries: {{ deliveries|length }}</p>
+    <p>{{ items.last.name }}: {{ items.last.remaining_stock|floatformat }} tests left</p>
   </div>
 </div>
