--- a/category/templates/category/category_update.html
+++ b/category/templates/category/category_update.html
@@ -3,28 +3,8 @@
   Category
 {% endblock title %}
 {% block panel_title %}
-<i class="bi bi-bookmarks-fill category-text-color"></i>  {{ object.name }}
+  <i class="bi bi-bookmarks-fill category-text-color"></i>  {{ object.name }}
 {% endblock panel_title %}
 {% block update_form %}
-  <div class="px-3 pt-3">
-    <div id="div_id_name" class="input-group mb-3">
-      <span class="input-group-text input-group-text-fw-sm">Name</span>
-      <input type="text"
-             name="name"
-             maxlength="50"
-             autocomplete="off"
-             class="textinput form-control"
-             value="{{ object.name }}"
-             required
-             id="id_name">
-    </div>
-    <div id="div_id_description" class="input-group mb-3">
-      <span class="input-group-text input-group-text-fw-sm">Description</span>
-      <textarea name="description"
-                cols="40"
-                rows="3"
-                class="textarea form-control"
-                id="id_description">{{ object.description }}</textarea>
-    </div>
-  </div>
+  {% include "category/category_form.html" %}
 {% endblock update_form %}
