--- a/company/templates/company/company_update.html
+++ b/company/templates/company/company_update.html
@@ -3,45 +3,8 @@
   Company
 {% endblock title %}
 {% block panel_title %}
-<i class="bi bi-buildings company-text-color"></i>  {{ object.name }}
+  <i class="bi bi-buildings company-text-color"></i>  {{ object.name }}
 {% endblock panel_title %}
 {% block update_form %}
-  <div class="px-3 pt-3">
-    <div id="div_id_name" class="mb-3 input-group">
-      <span class="input-group-text input-group-text-fw-sm">Name*</span>
-      <input type="text"
-             name="name"
-             maxlength="100"
-             class="textinput form-control"
-             value="{{ object.name }}"
-             required
-             id="id_name">
-    </div>
-    <div id="div_id_name" class="mb-3 input-group">
-      <span class="input-group-text input-group-text-fw-sm">Website</span>
-      <input type="url"
-             name="website"
-             maxlength="200"
-             value="{{ object.website }}"
-             class="urlinput form-control"
-             id="id_website">
-    </div>
-    <div id="div_id_name" class="mb-3 input-group">
-      <span class="input-group-text input-group-text-fw-sm">Phone</span>
-      <input type="text"
-             name="phone"
-             maxlength="20"
-             value="{{ object.phone }}"
-             class="textinput form-control"
-             id="id_phone">
-    </div>
-    <div id="div_id_name" class="mb-3 input-group">
-      <span class="input-group-text input-group-text-fw-sm">Description</span>
-      <textarea name="description"
-                cols="40"
-                rows="3"
-                class="textarea form-control"
-                id="id_description">{{ object.description }}</textarea>
-    </div>
-  </div>
+  {% include "company/company_form.html" %}
 {% endblock update_form %}
