--- a/item/templates/stock/stock_detail.html
+++ b/item/templates/stock/stock_detail.html
@@ -169,15 +169,19 @@
                     {{ sv.validation.authorised|date:"d/m/Y" }}
                     <span title="{{ sv.validation.authorised_by.get_full_name }}">{{ sv.validation.authorised_by.initials }}</span>
                   {% else %}
-                    <a href="javascript:"
-                       hx-trigger="click"
-                       hx-get="{% url 'validation_authorise' sv.validation.pk %}?next={{ request.path }}"
-                       hx-target="#crudModal .modal-content"
-                       hx-swap="innerHTML"
-                       data-bs-toggle="modal"
-                       data-bs-target="#crudModal">
+                    {% if request.user.is_supervisor %}
+                      <a href="javascript:"
+                         hx-trigger="click"
+                         hx-get="{% url 'validation_authorise' sv.validation.pk %}?next={{ request.path }}"
+                         hx-target="#crudModal .modal-content"
+                         hx-swap="innerHTML"
+                         data-bs-toggle="modal"
+                         data-bs-target="#crudModal">
+                        <i class="bi bi-three-dots text-muted" title="To be authorised..."></i>
+                      </a>
+                    {% else %}
                       <i class="bi bi-three-dots text-muted" title="To be authorised..."></i>
-                    </a>
+                    {% endif %}
                   {% endif %}
                 </td>
                 <td>{{ sv.validation.comments|default_if_none:"" }}</td>
