stock validation done

--- a/category/templates/category/category_list.html
+++ b/category/templates/category/category_list.html
@@ -16,7 +16,7 @@
           <th width="15%">Categories</th>
           <th width="25%" class="d-none d-lg-table-cell">Description</th>
           <th class="d-none d-lg-table-cell">Items</th>
-          <th width="5%" class="d-lg-table-cell">Actions</th>
+          <th width="5%" class="d-lg-table-cell"></th>
         </tr>
       </thead>
       <tbody>
