--- a/company/templates/company/company_list.html
+++ b/company/templates/company/company_list.html
@@ -19,7 +19,7 @@
           <th class="text-center d-none d-lg-table-cell">Supplied</th>
           <th class="ps-3 d-lg-table-cell">Phone</th>
           <th>Website</th>
-          <th width="5%" class=" d-lg-table-cell">Actions</th>
+          <th width="5%" class=" d-lg-table-cell"></th>
         </tr>
       </thead>
       <tbody>
