--- a/item/templates/inhouse/inhouse_list.html
+++ b/item/templates/inhouse/inhouse_list.html
@@ -16,7 +16,7 @@
           <th>Item</th>
           <th>Product ID</th>
           <th width="40%">Components</th>
-          <th class="d-none d-lg-table-cell">Actions</th>
+          <th class="d-none d-lg-table-cell"></th>
         </tr>
       </thead>
       <tbody>
