--- a/item/templates/item/item_list.html
+++ b/item/templates/item/item_list.html
@@ -19,7 +19,7 @@
           <th>Manufacturer</th>
           <th>Supplier</th>
           <th>Description</th>
-          <th class="d-none d-lg-table-cell">Actions</th>
+          <th class="d-none d-lg-table-cell"></th>
         </tr>
       </thead>
       <tbody>
