--- a/location/templates/location/location_list.html
+++ b/location/templates/location/location_list.html
@@ -17,7 +17,7 @@
           <th width="15%" class="d-none d-lg-table-cell">Room</th>
           <th width="20%" class="d-none d-lg-table-cell">Description</th>
           <th class="d-none d-lg-table-cell">Stock Items</th>
-          <th width="5%">Actions</th>
+          <th width="5%"></th>
         </tr>
       </thead>
       <tbody>
