--- a/item/templates/stock/stock_list.html
+++ b/item/templates/stock/stock_list.html
@@ -15,7 +15,7 @@
       <div class="panel-heading">
         <div class="row">
           <div class="col-lg-3">
-            <i class="bi bi-boxes stock-text-color"></i> <a href="{% url 'stock_detail' stock.pk %}"><span class="h5">{{ stock.item.name }}</span></a>
+            <a href="{% url 'stock_detail' stock.pk %}"><span class="h5">{{ stock.item.name }}</span></a>
             {% if stock.comments %}
               <i class="bi bi-chat-left-dots ps-2 text-danger"
                  title="Comments: {{ stock.comments }}"
@@ -30,7 +30,7 @@
                 <div class="col-3">Quantity</div>
                 <div class="col-2">Location</div>
                 <div class="col-3">Comments</div>
-                <div class="col-auto d-none d-lg-block">Actions</div>
+                <div class="col-auto d-none d-lg-block"></div>
               </div>
             </div>
           {% endif %}
@@ -54,7 +54,7 @@
         <div class="row align-items-center">
           <div class="col-lg-3 small px-5">
             {# stock properties #}
-            <table class="table table-sm table-borderless">
+            <table class="table table-sm table-borderless table-compact">
               <tr>
                 <td class="text-muted">Product Id:</td>
                 <td>
@@ -75,6 +75,18 @@
                 <td>
                   <span class="pe-3">{{ stock.delivery_date|date:"d/m/Y" }}</span>
                   <span>{% delivery_condition stock.condition %}</span>
+                </td>
+              </tr>
+              <tr>
+                <td class="text-muted">Validation:</td>
+                <td>
+                  {% if stock.validations.all|length %}
+                    {% for sv in stock.validations.all %}
+                      {% validation_status sv.validation.status %}
+                    {% endfor %}
+                  {% else %}
+                    {% validation_status "PENDING" %}
+                  {% endif %}
                 </td>
               </tr>
             </table>
