--- a/item/templates/validation/validation_detail.html
+++ b/item/templates/validation/validation_detail.html
@@ -27,7 +27,7 @@
             <th width="13%">Validated</th>
             <th width="13%">Authorised</th>
             <th>Comments</th>
-            <th width="10%">Actions</th>
+            <th width="10%"></th>
           </tr>
         </thead>
         <tbody>
