--- a/static/css/reagentree-1.0.css
+++ b/static/css/reagentree-1.0.css
@@ -355,3 +355,8 @@ a:hover {
   font-weight: bold;
   transform: translate(-50%, -50%);
 }
+
+.table-compact td {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
