--- a/templates/partials/navbar_menu_end.html
+++ b/templates/partials/navbar_menu_end.html
@@ -1,6 +1,6 @@
 <ul class="navbar-nav ms-auto">
   <li class="nav-item">
-    <a class="nav-link" href="javascript:alert('To be implemented!')"><i class="bi bi-qr-code scan-text-color"></i> Scan</a>
+    <a class="nav-link" href="javascript:alert('To be implemented!')"><i class="bi bi-qr-code-scan scan-text-color"></i> Scan</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="javascript:alert('To be implemented!')"><i class="bi bi-search search-text-color"></i> Search</a>
